RESOLVED FIXED196140
REGRESSION(r243094): Automation: browser crash in WebAutomationSession::exitFullscreenWindowForPage()
https://bugs.webkit.org/show_bug.cgi?id=196140
Summary REGRESSION(r243094): Automation: browser crash in WebAutomationSession::exitF...
Carlos Garcia Campos
Reported 2019-03-22 04:11:12 PDT
This is making most of the WebDriver tests to fail.
Attachments
Patch (1.59 KB, patch)
2019-03-22 04:14 PDT, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2019-03-22 04:13:48 PDT
#0 0x00007f6dc8e5b400 in WebKit::WebFullScreenManagerProxy::isFullScreen() () from /home/cgarcia/src/git/gnome/WebKit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #1 0x00007f6dc8f691f3 in WebKit::WebAutomationSession::exitFullscreenWindowForPage(WebKit::WebPageProxy&, WTF::CompletionHandler<void ()>&&) () from /home/cgarcia/src/git/gnome/WebKit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #2 0x00007f6dc8f6c86a in WebKit::WebAutomationSession::setWindowFrameOfBrowsingContext(WTF::String const&, WTF::JSONImpl::Object const*, WTF::JSONImpl::Object const*, WTF::Ref<Inspector::AutomationBackendDispatcherHandler::SetWindowFrameOfBrowsingContextCallback, WTF::DumbPtrTraits<Inspector::AutomationBackendDispatcherHandler::SetWindowFrameOfBrowsingContextCallback> >&&) () from /home/cgarcia/src/git/gnome/WebKit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #3 0x00007f6dc8c1a699 in Inspector::AutomationBackendDispatcher::setWindowFrameOfBrowsingContext(long, WTF::RefPtr<WTF::JSONImpl::Object, WTF::DumbPtrTraits<WTF::JSONImpl::Object> >&&) () from /home/cgarcia/src/git/gnome/WebKit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #4 0x00007f6dc8c1c75f in Inspector::AutomationBackendDispatcher::dispatch(long, WTF::String const&, WTF::Ref<WTF::JSONImpl::Object, WTF::DumbPtrTraits<WTF::JSONImpl::Object> >&&) () from /home/cgarcia/src/git/gnome/WebKit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #5 0x00007f6dc553cfc9 in Inspector::BackendDispatcher::dispatch(WTF::String const&) () from /home/cgarcia/src/git/gnome/WebKit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 #6 0x00007f6dc55a1055 in Inspector::RemoteInspector::sendMessageToTarget(unsigned int, char const*) () from /home/cgarcia/src/git/gnome/WebKit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 #7 0x00007f6dc55a45c7 in Inspector::RemoteInspectorServer::{lambda(_GDBusConnection*, char const*, char const*, char const*, char const*, _GVariant*, _GDBusMethodInvocation*, void*)#2}::_FUN(_GDBusConnection*, char const*, char const*, char const*, char const*, _GVariant*, _GDBusMethodInvocation*, void*) () from /home/cgarcia/src/git/gnome/WebKit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 #8 0x00007f6dc67c7fe9 in call_in_idle_cb (user_data=<optimized out>) at ../gio/gdbusconnection.c:4847 #9 0x00007f6dc65b2588 in g_main_dispatch (context=0x559603281710) at ../glib/gmain.c:3190 #10 g_main_context_dispatch (context=context@entry=0x559603281710) at ../glib/gmain.c:3855 #11 0x00007f6dc65b2948 in g_main_context_iterate (context=0x559603281710, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:3928 #12 0x00007f6dc65b2c32 in g_main_loop_run (loop=0x5596037ea2b0) at ../glib/gmain.c:4124 #13 0x00007f6dc6dcf8e5 in gtk_main () at gtkmain.c:1323 #14 0x00005596017b8fc4 in main ()
Carlos Garcia Campos
Comment 2 2019-03-22 04:14:32 PDT
WebKit Commit Bot
Comment 3 2019-03-22 09:03:36 PDT
Comment on attachment 365706 [details] Patch Clearing flags on attachment: 365706 Committed r243378: <https://trac.webkit.org/changeset/243378>
WebKit Commit Bot
Comment 4 2019-03-22 09:03:38 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-03-22 09:22:30 PDT
Note You need to log in before you can comment on or make changes to this bug.