REGRESSION(r243094): Automation: browser crash in WebAutomationSession::exitFullscreenWindowForPage() https://bugs.webkit.org/show_bug.cgi?id=196140

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2019-03-22
Reviewed by Chris Dumez.

Since r243094, the WebPageProxy fullscreen manager is not created in the constructor, but once the page has a
process launched.

* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::exitFullscreenWindowForPage): Null check WebPageProxy::fullScreenManager() before
using it.

Canonical link: https://commits.webkit.org/210440@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243378 268f45cc-cd09-0410-ab3c-d52691b4dbfc